--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4056,7 +4056,10 @@
                 loadCategories();
             } else if (sectionName === 'products') {
                 loadProducts();
-            } else if (sectionName === 'tables') {
+            } else if (sectionName === 'orders') {
+                loadOrders();
+            }
+             else if (sectionName === 'tables') {
                 loadTables();
             }
         }
@@ -4204,7 +4207,8 @@
                     loadCategoryStats(),
                     loadProductStats(),
                     loadPromotionStats(),
-                    loadTableStats() // Carregar stats de mesas
+                    loadTableStats(), // Carregar stats de mesas
+                    loadOrderStats()// Carregar estatísticas de pedidos
                 ];
 
                 // Se for super admin, carregar stats de usuários
@@ -4240,6 +4244,8 @@
                 // Carregar produtos em promoção
                 const responsePromotions = await fetch(`${apiBaseUrl}/products/promotions`);
                 const dataPromotions = await responsePromotions.json();
+
+                
 
                 if (currentUser?.role === 'super_admin') {
                     const responseUsers = await fetch(`${apiBaseUrl}/users/stats`, {
@@ -7195,11 +7201,11 @@ async function showKitchenView() {
 
 // Atualizar automaticamente
 function startOrderAutoRefresh() {
-    setInterval(async () => {
-        if (document.getElementById('orders').classList.contains('active')) {
-            await loadOrders();
-        }
-    }, 30000); // 30 segundos
+    // setInterval(async () => {
+    //     if (document.getElementById('orders').classList.contains('active')) {
+    //         await loadOrders();
+    //     }
+    // }, 30000); // 30 segundos
 }
 
 // Filtros e utilitários
