--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1566,7 +1566,7 @@
                     </a>
                 </li>
 
-                <li class="nav-item" data-section="dashboard" onclick="loadStatsInBackground();">
+                <li class="nav-item hovered" data-section="dashboard" onclick="loadStatsInBackground();">
                     <a href="#">
                         <span class="icon">
                             <ion-icon name="home-outline"></ion-icon>
